--- a/lang/en.json
+++ b/lang/en.json
@@ -10,12 +10,41 @@
   "param_lang": "🌐 Language:",
   "param_theme": "🎨 Theme",
   "close-settings": "Close",
-  "historique_title":"Historics",
-  "historique_msg": "Hello world.",
+  "historique_title":"History of the Interdepartmental High School of Djambala",
+  "historique_msg": "Located in the heart of the Plateaux Department, the Interdepartmental High School of Djambala is far more than an academic institution, it is a national symbol of educational excellence. Inaugurated in 2013 by the National Petroleum Company of Congo (SNPC), this modern school complex was created to meet a crucial need: to provide the country’s best students with an environment that fosters intellectual growth, discipline, and equal opportunity. Spread across 14 hectares, the campus features modern classrooms, spacious dormitories, a cafeteria, a medical center, staff housing, and a co-educational boarding facility. The school operates under a strict meritocracy-based system, where admission requires a minimum average of 14/20 on the BEPC (lower secondary certificate), and students must maintain at least 12/20 to remain enrolled. Since its creation, the school has become a benchmark in Congo-Brazzaville, with outstanding academic results, strict supervision, and a strong commitment to promoting national educational excellence. The Interdepartmental High School of Djambala is equipped with modern, ambitious infrastructure designed to provide students with an optimal learning environment. Built on a 14-hectare site, the school complex meets high standards of educational excellence. At its core are multiple academic buildings featuring spacious, well-ventilated classrooms equipped with up-to-date teaching tools. A central cafeteria accommodates hundreds of students daily, providing balanced meals for boarding students. The school infirmary, fully functional and well-equipped, ensures proper medical care for the students. Dormitories are separated by gender and provide comfortable conditions conducive to learning and rest. A co-ed boarding system is managed with strict supervision from a dedicated education team. The campus also includes housing for teaching staff, well-maintained green spaces, sports facilities, and areas for spiritual practice, offering a holistic approach to student development.",
   "actu_accueil": "Opening ceremony",
   "accueil_msg": "Today, the Principal and his pedagogic team have received new students.",
-  "actu_compete":"",
-  "compete_msg":"",
-  "actu_sport":"",
-  "sport_msg":""
+  "actu_compete":"LIDD at ONSSU",
+  "compete_msg":"From pitch to podium, the school colors shone bright! The ONSSU games brought fierce competition and glorious moments for LIDD’s athletes.",
+  "actu_sport":"Sports Field Trip to the Airport",
+  "sport_msg":"That day, students ran… on an airport runway! It wasn’t just about running, it was about discovering aviation, teamwork, and dreaming of flight.",
+  "actu_expose":"literarias exposes",
+  "expose_msg":"Words, ideas, and a stage to be heard... Presentations are not just assignments, they’re acts of identity and discovery.",
+  "actu_g9": "Last day of G9 at LIDD",
+  "g9_msg":"They closed their books, not their dreams... G9’s farewell marked the end of one journey — and the beginning of another.",
+  "actu_conference":"Conference about Russia-Ukraine war",
+  "conference_msg":"Through maps, dialogue and questions, the 2022 Ukraine–Russia conference stirred minds and raised awareness.",
+  "actu_soiree":"2024 cultural night",
+  "soiree_msg":"A night when art spoke for everyone. Music, dance, slam, and tradition united in a glowing celebration of youth.",
+  "accueil_link":"See more",
+  "compete_link":"See more",
+  "sortie_link":"See more",
+  "expose_link":"See more",
+  "g9_link":"See more",
+  "conference_link":"See more",
+  "soiree_link":"See more",
+  "article_soiree":"2024 Cultural Night",
+  "s_msg":"June 15th, 2024 — a date to remember at Djambala’s Interdepartmental High School, where the annual cultural night brought together students, teachers, administrators, and guests to celebrate youth, creativity, and cultural pride. The school’s covered area was transformed into a vibrant stage for traditional Congolese dances, urban choreographies, poetic slams, theater pieces, ethnic fashion shows, and live musical acts. Each class presented a performance, often tied to powerful themes like African unity, environmental awareness, human rights, or cultural heritage. Highlights of the night included a trilingual theater play (in French, English, and Lingala), an African storytelling contest, and a G9–G6 musical collaboration that lit up the audience. The principal closed the event with powerful words: “You are a generation that creates with conscience and carries identity with dignity.” This was more than a show — it was a collective celebration of identity, art and voice.",
+  "art_reception":"",
+  "reception_msg":"",
+  "art_compet":"Inter-High School Competition: ONSSU games",
+  "compet_msg":"Every year, the Interdepartmental High School of Djambala participates in the competitions organized by the National Office of School and University Sports (ONSSU). Starting with sectoral games, they move on to the departmental games, where top performers qualify for the national games. At the departmental level (Plateaux or Brazzaville), students compete in team sports like football, basketball, volleyball, and handball, as well as individual events in athletics (800 m, 4×100 m relay, jumps, throws…)  . Over a week of intense competition, values such as fair play, athletic commitment, and school pride shine through. Winners go on to the national games (held in places like Ewo or Dolisie)  , where outstanding performances further enhance the school’s prestige.",
+  "art_sort":"",
+  "sort_msg":"",
+  "art_expo":"Literary Presentations at the Interdepartmental High School of Djambala",
+  "expo_msg":"At Djambala's Interdepartmental High School, oral presentations play a central role in student development, particularly in literary subjects such as French, English, history-geography, and philosophy. These intellectual and speaking exercises aim to foster critical thinking, structured reasoning, and confident self-expression. In French, students analyze literary works, explore rhetorical strategies, or construct persuasive arguments. In English, they improve pronunciation, develop thematic vocabulary, and practice real conversation. In history-geography, topics include current events, historical facts, or global challenges. In philosophy, students are invited to question concepts, defend positions, and refine their reasoning with rigor. Usually prepared in pairs or small groups, these presentations are evaluated based on both content and delivery: subject mastery, organization, critical insight, time management, posture, and speech clarity. Beyond grades, they are seen as a rite of passage — a public platform for students to make their voices heard, and a first step towards active citizenship.",
+  "art-g9":"The End of the Ninth Generation’s Journey (G9): A Celebration of Legacy",
+  "G9_msg":"It was a day to remember — the moment the ninth generation (G9) of students at Djambala's Interdepartmental High School completed their academic journey. After six intense years of learning, discipline, and growth, the final-year students celebrated their graduation through a touching farewell ceremony, organized by the school, teachers, and younger students. The event began with a formal speech from the principal, who praised the remarkable achievements of the G9 class, many of whom had excelled in their national exams. Student representatives followed with speeches and reflections, sharing stories of sleepless study nights, interschool competitions, and late-night philosophical debates lit by flashlights. But the real climax came during the cultural night, held beneath the school’s shelter. With performances in dance, music, comedy sketches, photo slideshows, and the ceremonial handing of symbolic passage certificates, the atmosphere was both joyful and bittersweet. Tears flowed as students realized the chapter was closing. G9 departs — but its spirit lives on, etched in the memories of their peers, and the legacy of the school itself.",
+  "art_conf":"Conference on the Russia–Ukraine War: A School Faces Living History",
+  "conf_msg":"In November 2022, students at the Interdepartmental High School of Djambala attended a remarkable conference on one of the most significant global crises of the decade: the war between Russia and Ukraine. Organized by the History-Geography Department, and featuring a Congolese university expert in international relations, the event aimed to raise awareness among students about global geopolitical challenges. For nearly two hours, the speaker traced the conflict’s origins, the Donbass crisis, the annexation of Crimea, and NATO–Russia tensions. Maps, video excerpts, and press articles enriched the talk. Final-year students then participated in a lively Q&A session, offering nuanced insights — some linking the conflict’s impact to Africa’s economic and diplomatic future. The session ended with a symbolic moment of silence for civilian victims and a call to adopt a humanist perspective in world affairs."
 }
