--- a/lang/es.json
+++ b/lang/es.json
@@ -10,12 +10,41 @@
   "param_lang": "🌐 Idioma:",
   "param_theme": "🎨 Tema",
   "close-settings": "Cerrar",
-  "historique_title":"Historico",
-  "historique_msg": "Hola a todos.",
-  "actualite_subtitle": "Pimera ceremonia",
-  "ceremonie_msg": "Nuevos alumnos han llegado hoy",
-  "actu_compete":"",
-  "compete_msg":"",
-  "actu_sport":"",
-  "sport_msg":""
+  "historique_title":"Historia del Liceo Interdepartamental de Djambala",
+  "historique_msg": "Ubicado en el corazón del departamento de los Plateaux, el Liceo Interdepartamental de Djambala no es solo una institución educativa: es un símbolo de la excelencia académica congoleña. Inaugurado en 2013 bajo la iniciativa de la Compañía Nacional de Petróleos del Congo (SNPC), este moderno complejo escolar nació con un objetivo claro: brindar a los mejores estudiantes del país un entorno que favorezca el desarrollo intelectual, la disciplina y la igualdad de oportunidades. Construido sobre un terreno de 14 hectáreas, el liceo cuenta con aulas modernas, dormitorios amplios, comedor, enfermería, viviendas para el personal docente e internado mixto. Funciona bajo un estricto sistema de mérito, exigiendo un promedio mínimo de 14/20 en el BEPC para ingresar y 12/20 para continuar. Desde su creación, el liceo se ha consolidado como una referencia nacional en la República del Congo, con excelentes resultados académicos, disciplina rigurosa y un fuerte compromiso con la promoción de la élite educativa. El Liceo Interdepartamental de Djambala cuenta con una infraestructura moderna y ambiciosa, diseñada para proporcionar a los estudiantes un entorno educativo de alta calidad. Construido sobre un terreno de 14 hectáreas, el complejo escolar cumple con los estándares más exigentes en educación africana. En el centro del liceo se encuentran varios edificios pedagógicos con aulas espaciosas, bien ventiladas y equipadas con pizarras modernas. Un comedor central sirve comidas balanceadas diariamente a los estudiantes internos. La enfermería escolar, equipada y operativa, garantiza la atención médica de los alumnos. Los dormitorios, separados por género, ofrecen condiciones de vida dignas y adaptadas al estudio. El sistema de internado mixto está gestionado por un equipo educativo presente y riguroso. El liceo también dispone de viviendas para el personal docente, zonas verdes bien cuidadas, espacios deportivos y áreas de culto, integrando así el desarrollo intelectual, físico, social y espiritual de sus estudiantes",
+  "actu_accueil": "Pimera ceremonia",
+  "accueil_msg": "Nuevos alumnos han llegado hoy",
+  "actu_compete":"LIDD en ONSSU",
+  "compete_msg":"¡Del campo al podio, Djambala brilló! Los juegos interliceales ONSSU fueron escenario de talento, esfuerzo y gloria para nuestros campeones.",
+  "actu_sport":"Salida deportiva al aeropuerto",
+  "sport_msg":"Ese día, los alumnos corrieron… ¡por una pista aérea! Una experiencia que mezcló educación física y exploración del mundo aéreo.",
+  "actu_expose":"Exposados literarios",
+  "expose_msg":"Palabras, ideas y una voz que se afirma... Las exposiciones literarias permiten pensar, argumentar y brillar.",
+  "actu_g9": "La G9 se va",
+  "g9_msg":"Cerraron los cuadernos, no sus sueños... La G9 se despidió con emoción, arte y un futuro por conquistar.",
+  "actu_conference":"Conferencia sobre la guera Rusia-Ukraine",
+  "conference_msg":"Reflexión, preguntas, emociones. La conferencia 2022 fue una lección de conciencia global.",
+  "actu_soiree":"Noche cultural 2024",
+  "soiree_msg":"Una noche donde el arte habló fuerte. La cultura tomó el escenario y los aplausos fueron eternos.",
+  "accueil_link":"Ver mas",
+  "compete_link":"Ver mas",
+  "sortie_link":"ver mas",
+  "expose_link":"ver mas",
+  "g9_link":"ver mas",
+  "conference_link":"ver mas",
+  "soiree_link":"ver mas",
+  "article_soiree":"Noche cultural 2024",
+  "s_msg":"El 15 de junio de 2024, el Liceo Interdepartamental de Djambala vivió una de sus noches más mágicas: la gran velada cultural anual, en la que se reunieron alumnos, profesores, personal administrativo e invitados para rendir homenaje a la creatividad juvenil y la riqueza cultural africana. Bajo el preáu decorado como un auténtico escenario, desfilaron bailes tradicionales congoleños, coreografías modernas, slams, obras de teatro, pasarelas de trajes étnicos y actuaciones musicales. Cada clase presentó un número, abordando temas como la unidad africana, la ecología, los derechos humanos o la herencia ancestral. Entre los momentos más destacados: una obra de teatro trilingüe (francés, inglés y lingala), un concurso de cuentos africanos y un dúo musical entre G9 y G6 que emocionó al público. El director cerró la velada elogiando a una juventud lúcida, creativa y profundamente conectada con sus raíces. Más que un evento, fue un acto de expresión libre, una ventana al alma colectiva de los estudiantes.",
+  "art_reception":"",
+  "reception_msg":"",
+  "art_compet":"Competencia inter‑liceos Juegos de ONSSU",
+  "compet_msg":"Cada año, el Liceo Interdepartamental de Djambala participa en las competiciones organizadas por la Oficina Nacional de Deportes Escolares y Universitarios (ONSSU). Tras los juegos sectoriales, los alumnos compiten en los juegos departamentales, donde los mejores se clasifican para los juegos nacionales. En el ámbito departamental (Plateaux o Brazzaville), los estudiantes se enfrentan en deportes colectivos como fútbol, baloncesto, voleibol y balonmano, así como en modalidades individuales de atletismo (800 m, relevos 4×100 m, saltos, lanzamientos…)  . Durante una semana de competición intensa, se destacan los valores del fair‑play, el compromiso físico y el orgullo de representar al liceo. Los ganadores acceden a los juegos nacionales (celebrados en lugares como Ewo o Dolisie)  , donde su desempeño realza aún más el prestigio del establecimiento.",
+  "art_sort":"",
+  "sort_msg":"",
+  "art_expo":"Exposiciones literarias en el Liceo Interdepartamental de Djambala",
+  "expo_msg":"En el Liceo Interdepartamental de Djambala, las exposiciones orales tienen un lugar destacado en la formación de los alumnos, especialmente en las materias de francés, inglés, historia-geografía y filosofía. Son ejercicios intelectuales y orales que buscan desarrollar un pensamiento crítico, estructura argumentativa y fluidez expresiva. En francés, se abordan análisis de obras, construcción de argumentos y estudio de figuras literarias. En inglés, se trabaja la pronunciación, el vocabulario temático y la interacción verbal. En historia y geografía, se discuten temas actuales, hechos históricos o desafíos globales. En filosofía, los alumnos cuestionan ideas, defienden tesis y aprenden a argumentar con lógica y profundidad. Preparadas en parejas o grupos, estas exposiciones son evaluadas tanto en el contenido como en la forma: dominio del tema, estructura, análisis crítico, tiempo, postura y claridad del mensaje. Más allá de la calificación, representan un rito de paso, un espacio donde cada voz puede resonar y una plataforma para forjar una conciencia ciudadana.",
+  "art-g9":"Fin del ciclo de la novena generación (G9): Una fiesta cargada de emoción",
+  "G9_msg":"Fue un día inolvidable: la novena generación (G9) del Liceo Interdepartamental de Djambala cerró oficialmente su ciclo escolar. Después de seis años de esfuerzo, disciplina y crecimiento, los alumnos de último año celebraron una ceremonia de despedida emotiva y alegre, organizada por la dirección, los docentes y sus compañeros más jóvenes. La jornada comenzó con un discurso solemne del director, quien felicitó a la G9 por su trayectoria ejemplar, destacando los excelentes resultados obtenidos en el bachillerato. Luego, los propios alumnos tomaron la palabra, compartiendo anécdotas conmovedoras y divertidas: noches de estudio interminables, debates bajo las estrellas, amistades forjadas a fuego lento. La velada cultural fue el punto culminante de la fiesta: bailes, coros, sketchs humorísticos, proyección de fotos y entrega simbólica de «certificados de transición» marcaron una noche cargada de emoción. Algunos estudiantes, entre lágrimas, comprendían que una etapa concluía. La G9 se va, pero deja huellas profundas en los muros, los recuerdos y la historia del liceo.",
+  "art_conf":"Conferencia sobre la guerra Rusia–Ucrania: una escuela frente a la historia viva",
+  "conf_msg":"En noviembre de 2022, el Liceo Interdepartamental de Djambala acogió una conferencia especial sobre uno de los conflictos más impactantes del siglo XXI: la guerra entre Rusia y Ucrania. Organizada por el departamento de historia-geografía, y con la participación de un especialista congoleño en relaciones internacionales, la actividad tenía como objetivo concienciar a los alumnos sobre los desafíos geopolíticos actuales. Durante casi dos horas, el ponente abordó los orígenes del conflicto, la región del Donbás, la anexión de Crimea y las tensiones OTAN–Rusia. La exposición fue acompañada de mapas, vídeos y artículos de prensa. Luego, los alumnos del último curso intervinieron con preguntas y reflexiones profundas sobre el papel de África ante este tipo de crisis. La conferencia finalizó con un minuto de silencio simbólico por las víctimas civiles y un llamado al humanismo y a la paz como principios rectores en el análisis político."
 }
